--- a/video.html
+++ b/video.html
@@ -56,25 +56,25 @@
                 </div>
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/[ENG SUB] Wanna One Zero Base EP 5 Try Not To Laugh Challenge.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/video6088935772163935375.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/video6088935772163935401.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/video6088935772163935402.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
