--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
             </h1>
         </div>
         <body>
-            <!--<audio src="Music/rEv7cw34_wE_160.mp3" controls></audio>-->
+            <!--<audio src="Music/rEv7cw34_wE_160.mp3" controls autoplay></audio>-->
         
             <figure>
                 <figcaption>
