--- a/rndmvid.html
+++ b/rndmvid.html
@@ -62,31 +62,31 @@
                 </div>
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/video6087083335589301047.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/video6087083335589301062.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/video6087083335589301071.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/video6087083335589301059.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
         </div>
         <div class="video-player" id="videoPlayer">
-            <video width="100%" controls autoplay id="myVideo">
+            <video width="100%" controls id="myVideo">
                 <source src="Video/video6087083335589301061.mp4" type="video/mp4">
             </video>
             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
