--- a/biodata.html
+++ b/biodata.html
@@ -64,7 +64,7 @@
                         </div>
 
                         <div class="video-player" id="videoPlayer">
-                            <video width="100%" controls autoplay id="myVideo">
+                            <video width="100%" controls id="myVideo">
                                 <source src="Video/video6082540849328032751.mp4" type="video/mp4">
                             </video>
                             <img src="images/icons8-close-window-16.png" class="close-btn" onclick="stopVideo()">
