--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
 
         <div class="text-box">
-            <h1>WELCOME TO MY WEBSITE</h1>
+            <h1>Welcome To My Websites</h1>
             <br>
             <h2>Acknowledgment</h2>
     <pre>
